# n_ai_agent_meeting_daily

./: .gitignore
docs/: commitLog.md
my-pipecat/digihire-agent-01/: .gitignore  README.md
my-pipecat/digihire-agent-01/client/: package-lock.json  package.json
my-pipecat/digihire-agent-01/client/src/: config.ts
my-pipecat/digihire-agent-01/client/src/app/: page.tsx
my-pipecat/digihire-agent-01/client/src/app/components/: TransportSelect.tsx
my-pipecat/digihire-agent-01/docs/: main.md  setup.md
my-pipecat/digihire-agent-01/server/: .env.example  bot.py  pcc-deploy.toml  pyproject.toml
pipeCloud02/docs/: commitLog.md
pipeCloud02/server/: .env.example  bot.py  daily_room.py  pcc-deploy.toml  pyproject.toml
pipecatAgent/: .gitignore  Dockerfile  agent.py  requirements.txt
recordings/roomx-7adcba7c/: transcript_4ce18509.json
src/: .env  package-lock.json  package.json  server.js
src/agent/: bot..js  conversation.js
src/bot/: botRegistry.js  dailyBot.js
src/config/: env.js
src/daily/: daily.service.js  room.service.js
src/routes/: meeting.routes.js
src/scripts/: clearAllRooms.js  startMeeting.js
src/services/: daily.service.js  recording.service.js  storage.service.js  transcript.service.js
src/storage/: fileStorage.js
src/tests/: daily.http  meeting.http
